--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "15.3.3",
     "openai": "^5.1.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.25.56"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
